--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 15px;
+            padding: 0 20px;
         }
 
         .hero {
@@ -35,15 +35,10 @@
                         url('/api/placeholder/1200/800');
             background-size: cover;
             background-position: center;
-            position: relative;
-            overflow: hidden;
         }
 
         .hero-content {
             padding: 2rem;
-            opacity: 0;
-            transform: translateY(30px);
-            animation: fadeInUp 1s ease forwards;
         }
 
         .hero h1 {
@@ -62,6 +57,7 @@
             line-height: 1.2;
         }
 
+
         .hero p {
             font-size: 1.3rem;
             color: #e2e8f0;
@@ -70,32 +66,29 @@
             line-height: 1.8;
         }
 
+        /* Achievement Cards */
         .achievements {
-            padding: 4rem 0;
+            padding: 5rem 0;
             background: rgba(15, 23, 42, 0.7);
         }
 
         .achievement-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
-            padding: 1rem;
+            gap: 2rem;
         }
 
         .achievement-card {
             background: rgba(30, 41, 59, 0.9);
             border-radius: 12px;
-            padding: 1.5rem;
+            padding: 2rem;
+            transition: all 0.3s ease;
             border-left: 4px solid #60a5fa;
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        .achievement-card.visible {
-            opacity: 1;
-            transform: translateY(0);
-            animation: float 6s ease-in-out infinite;
+        .achievement-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .metric {
@@ -105,19 +98,17 @@
             font-weight: bold;
         }
 
+        /* Projects Section */
         .projects {
-            padding: 4rem 0;
+            padding: 5rem 0;
         }
 
         .section-title {
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             text-align: center;
-            margin-bottom: 2.5rem;
+            margin-bottom: 3rem;
             color: #fff;
             position: relative;
-            opacity: 0;
-            transform: translateX(-50px);
-            animation: slideIn 0.8s ease forwards;
         }
 
         .section-title::after {
@@ -132,17 +123,9 @@
         .project-card {
             background: rgba(30, 41, 59, 0.95);
             border-radius: 12px;
-            padding: 1.5rem;
+            padding: 2rem;
+            transition: all 0.3s ease;
             border: 1px solid rgba(96, 165, 250, 0.2);
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .project-card.visible {
-            opacity: 1;
-            transform: translateY(0);
-            animation: float 6s ease-in-out infinite;
         }
 
         .project-card h3 {
@@ -154,7 +137,7 @@
         .tech-stack {
             display: flex;
             flex-wrap: wrap;
-            gap: 0.8rem;
+            gap: 0.1rem;
             margin-top: 1.5rem;
         }
 
@@ -166,29 +149,16 @@
             font-size: 0.9rem;
             letter-spacing: 0.5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
         }
 
-        .tech-tag:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
+        /* Skills Section */
         .skills {
-            padding: 4rem 0;
+            padding: 5rem 0;
             background: rgba(15, 23, 42, 0.8);
         }
 
         .skill-category {
             margin-bottom: 2rem;
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.5s ease;
-        }
-
-        .skill-category.visible {
-            opacity: 1;
-            transform: translateY(0);
         }
 
         .skill-category h3 {
@@ -211,18 +181,18 @@
             padding: 1rem;
             border-radius: 8px;
             text-align: center;
-            cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(96, 165, 250, 0.2);
         }
 
         .skill-tag:hover {
-            transform: translateY(-5px) scale(1.05);
             background: #1e40af;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            transform: translateY(-2px);
         }
 
+        /* Contact Section */
         .contact {
-            padding: 4rem 0;
+            padding: 5rem 0;
             text-align: center;
             background: linear-gradient(rgba(15, 23, 42, 0.95), rgba(30, 41, 59, 0.95));
         }
@@ -237,32 +207,13 @@
             align-items: center;
             gap: 0.8rem;
             font-size: 1.1rem;
-            position: relative;
-            overflow: hidden;
             transition: all 0.3s ease;
-        }
-
-        .contact-btn:before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 0;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            transition: width 0.6s ease, height 0.6s ease;
-        }
-
-        .contact-btn:hover:before {
-            width: 300px;
-            height: 300px;
+            margin-top: 2rem;
         }
 
         .contact-btn:hover {
+            background: #1d4ed8;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(37, 99, 235, 0.4);
         }
 
         .social-links {
@@ -275,43 +226,16 @@
         .social-links a {
             color: #fff;
             text-decoration: none;
+            transition: all 0.3s ease;
             padding: 1rem;
             border-radius: 50%;
             background: rgba(30, 41, 59, 0.8);
-            transform: scale(1);
-            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .social-links a:hover {
             color: #60a5fa;
-            transform: scale(1.2) rotate(8deg);
-        }
-
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes slideIn {
-            from {
-                transform: translateX(-100px);
-                opacity: 0;
-            }
-            to {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-10px);
-            }
+            background: rgba(30, 41, 59, 1);
+            transform: translateY(-2px);
         }
 
         @media (max-width: 768px) {
@@ -319,7 +243,6 @@
             .hero h2 { font-size: 1.8rem; }
             .section-title { font-size: 2.2rem; }
             .metric { font-size: 2rem; }
-            .social-links { gap: 1rem; }
         }
     </style>
 </head>
@@ -431,4 +354,33 @@ streamline deployment processes and implement scalable cloud solutions using AWS
     <section class="contact">
         <div class="container">
             <h2 class="section-title">Connect With Me</h2>
-            <p style="color: #e2e8f0; font-size
+            <p style="color: #e2e8f0; font-size: 1.2rem;">Ready to collaborate on challenging DevOps projects</p>
+            <a href="mailto:ghanumath16@gmail.com" class="contact-btn">
+                <i data-feather="mail"></i>
+                Get in Touch
+            </a>
+            <div class="social-links">
+                <a href="https://github.com"><i data-feather="github"></i></a>
+                <a href="https://linkedin.com"><i data-feather="linkedin"></i></a>
+                <a href="tel:+919441240565"><i data-feather="phone"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <script>
+        feather.replace();
+        
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        }, { threshold: 0.1 });
+
+        document.querySelectorAll('.achievement-card, .project-card, .skill-category').forEach((element) => {
+            observer.observe(element);
+        });
+    </script>
+</body>
+</html>
